--- a/ProjectCDTT_63132701/Views/san_pham/Edit.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Edit.cshtml
@@ -84,7 +84,9 @@
 
         <div class="text-center mt-4">
             <div class="d-inline-flex gap-2">
-                <input type="submit" value="Lưu sản phẩm" class=" btn-submit" />
+                <button type="submit" class="btn-submit">
+                    <i class="fa-solid fa-check"></i> Lưu sản phẩm
+                </button>
                 @Html.ActionLink("Hủy", "QLSP", null, new { @class = " btn-cancel text-decoration-none" })
             </div>
         </div>
