--- a/ProjectCDTT_63132701/Content/thuonghieu.css
+++ b/ProjectCDTT_63132701/Content/thuonghieu.css
@@ -1,6 +1,6 @@
 ﻿/* Cấu hình chung */
 body {
-    font-family: 'Arial', sans-serif;
+    /*font-family: 'Arial', sans-serif;*/
     margin: 0;
     padding: 0;
     background-color: #f5f6f7;
