--- a/ProjectCDTT_63132701/Views/Don_hang/QLDH.cshtml
+++ b/ProjectCDTT_63132701/Views/Don_hang/QLDH.cshtml
@@ -55,11 +55,13 @@
                 </td>
                 <td>
 
-                    <a href="@Url.Action("Details", new { id = item.MaDH })" class="btn btn-info btn-sm">
-                        <i class="fas fa-eye"></i>
+                    <a href="@Url.Action("Details", new { id = item.MaDH })" class="btn btn-secondary btn-sm">
+                        <i class="fa-solid fa-check"></i>
                     </a>
 
-
+                    <a href="@Url.Action("Index", new { id = item.MaDH })" class="btn btn-info btn-sm">
+                        <i class="fa-solid fa-eye"></i>
+                    </a>
                     <a href="@Url.Action("Edit", new { id = item.MaDH })" class="btn btn-warning btn-sm">
                         <i class="fas fa-edit"></i>
                     </a>
