--- a/ProjectCDTT_63132701/Views/don_hang/Delete.cshtml
+++ b/ProjectCDTT_63132701/Views/don_hang/Delete.cshtml
@@ -2,72 +2,56 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Delete</h2>
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/delete.css" />
+</head>
 
-<h3>Bạn có chắc chắn muốn xóa đơn hàng này?</h3>
-<div>
-    <h4>DonHang</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TongTien)
-        </dt>
+<div class="form-wrapper">
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
+    <h2 class="mb-4">Bạn có chắc chắn muốn xóa đơn hàng này?</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.TongTien)
-        </dd>
+    <div class="row">
+        <div class="col-md-12">
+            <dl class="row">
+                <dt class="col-sm-3">Tổng tiền:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.TongTien)</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TrangThai)
-        </dt>
+                <dt class="col-sm-3">Trạng thái đơn hàng:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.TrangThai)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TrangThai)
-        </dd>
+                <dt class="col-sm-3">Ngày tạo:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.NgayTao)</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NgayTao)
-        </dt>
+                <dt class="col-sm-3">Mã vận đơn:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.MaVanDon)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.NgayTao)
-        </dd>
+                <dt class="col-sm-3">Khách hàng:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.KhachHang.HoTen)</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MaVanDon)
-        </dt>
+                <dt class="col-sm-3">Trạng thái hóa đơn:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.HoaDon.TrangThai)</dd>
+            </dl>
 
-        <dd>
-            @Html.DisplayFor(model => model.MaVanDon)
-        </dd>
+            @using (Html.BeginForm("Delete", "don_hang", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                @Html.HiddenFor(model => model.MaDH)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.KhachHang.HoTen)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.KhachHang.HoTen)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.HoaDon.TrangThai)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HoaDon.TrangThai)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "QLDH")
+                <div class="d-flex justify-content-center gap-3 mt-4">
+                    <button type="submit" class="btn-submit">
+                        <i class="fas fa-trash-alt"></i> Xóa
+                    </button>
+                    <a href="@Url.Action("QLDH", "don_hang")" class="btn-cancel">
+                        Hủy
+                    </a>
+                </div>
+            }
         </div>
-    }
+    </div>
 </div>
