--- a/ProjectCDTT_63132701/Views/khach_hang/Delete.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/Delete.cshtml
@@ -5,69 +5,54 @@
     Layout = "~/Views/shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Delete</h2>
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/delete.css" />
+</head>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>KhachHang</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.HoTen)
-        </dt>
+<div class="form-wrapper">
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
+    <h2 class="mb-4">Bạn có chắc chắn muốn xóa khách hàng này?</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.HoTen)
-        </dd>
+    <div class="row">
+        <div class="col-md-12">
+            <dl class="row">
+                <dt class="col-sm-3">Họ tên:</dt>
+                <dd class="col-sm-9">@Model.HoTen</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+                <dt class="col-sm-3">Email:</dt>
+                <dd class="col-sm-9">@Model.Email</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+                <dt class="col-sm-3">Mật khẩu:</dt>
+                <dd class="col-sm-9">@Model.MatKhau</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MatKhau)
-        </dt>
+                <dt class="col-sm-3">Số điện thoại:</dt>
+                <dd class="col-sm-9">@Model.SoDienThoai</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.MatKhau)
-        </dd>
+                <dt class="col-sm-3">Địa chỉ:</dt>
+                <dd class="col-sm-9">@Model.DiaChi</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SoDienThoai)
-        </dt>
+                <dt class="col-sm-3">Vai trò:</dt>
+                <dd class="col-sm-9">@Model.VaiTro</dd>
+            </dl>
 
-        <dd>
-            @Html.DisplayFor(model => model.SoDienThoai)
-        </dd>
+            @using (Html.BeginForm("Delete", "khach_hang", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                @Html.HiddenFor(model => model.MaKH)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DiaChi)
-        </dt>
+                <div class="d-flex justify-content-center gap-3 mt-4">
+                    <button type="submit" class="btn-submit">
+                        <i class="fas fa-trash-alt"></i> Xóa
+                    </button>
+                    <a href="@Url.Action("QLKH", "khach_hang")" class="btn-cancel">
+                        Hủy
+                    </a>
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.DiaChi)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.VaiTro)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.VaiTro)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            }
         </div>
-    }
+    </div>
 </div>
