--- a/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
@@ -22,7 +22,7 @@
             <th>Số điện thoại</th>
             <th>Địa chỉ</th>
             <th>Vai trò</th>
-
+            <th>Hành động</th>
         </tr>
     </thead>
     <tbody>
