--- a/ProjectCDTT_63132701/Views/van_chuyen/Delete.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Delete.cshtml
@@ -1,77 +1,57 @@
 ﻿@model ProjectCDTT_63132701.Models.VanChuyen
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Xóa đơn vị vận chuyển";
     Layout = "~/Views/shared/_LayoutAdmin.cshtml";
 }
+
 <head>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="~/Content/create.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/delete.css" />
 </head>
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>VanChuyen</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DonViVanChuyen)
-        </dt>
+<div class="form-wrapper">
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
+    <h2 class="mb-4">Bạn có chắc chắn muốn xóa đơn vị vận chuyển này?</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.DonViVanChuyen)
-        </dd>
+    <div class="row">
+        <div class="col-md-12">
+            <dl class="row">
+                <dt class="col-sm-3">Đơn vị vận chuyển:</dt>
+                <dd class="col-sm-9">@Model.DonViVanChuyen</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TrangThai)
-        </dt>
+                <dt class="col-sm-3">Trạng thái:</dt>
+                <dd class="col-sm-9">@Model.TrangThai</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TrangThai)
-        </dd>
+                <dt class="col-sm-3">Ngày tạo:</dt>
+                <dd class="col-sm-9">@Model.NgayTao?.ToString("dd/MM/yyyy")</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NgayTao)
-        </dt>
+                <dt class="col-sm-3">Thời gian giao:</dt>
+                <dd class="col-sm-9">@Model.ThoiGianGiao</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.NgayTao)
-        </dd>
+                <dt class="col-sm-3">Thời gian nhận:</dt>
+                <dd class="col-sm-9">@Model.ThoiGianNhan</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ThoiGianGiao)
-        </dt>
+                <dt class="col-sm-3">Trạng thái đơn hàng:</dt>
+                <dd class="col-sm-9">@Model.DonHang?.TrangThai</dd>
+            </dl>
 
-        <dd>
-            @Html.DisplayFor(model => model.ThoiGianGiao)
-        </dd>
+            @using (Html.BeginForm("Delete", "VanChuyen", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                @Html.HiddenFor(model => model.MaVanChuyen)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ThoiGianNhan)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ThoiGianNhan)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DonHang.TrangThai)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DonHang.TrangThai)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                <div class="d-flex justify-content-center gap-3 mt-4">
+                    <button type="submit" class="btn-submit">
+                        <i class="fas fa-trash-alt"></i> Xóa
+                    </button>
+                    <a href="@Url.Action("QLVC", "Van_chuyen")" class="btn-cancel">
+                        Hủy
+                    </a>
+                </div>
+            }
         </div>
-    }
+    </div>
 </div>
