--- a/ProjectCDTT_63132701/Views/van_chuyen/Edit.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Edit.cshtml
@@ -1,83 +1,75 @@
 ﻿@model ProjectCDTT_63132701.Models.VanChuyen
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Chỉnh sửa vận chuyển";
     Layout = "~/Views/shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Edit</h2>
+<head>
+    <link rel="stylesheet" href="~/Content/create.css" />
+</head>
 
+<div class="form-wrapper">
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
+    <h2 class="mb-4">Chỉnh sửa vận chuyển</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>VanChuyen</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.MaVanChuyen)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaDH, "MaDH", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("MaDH", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MaDH, "", new { @class = "text-danger" })
+        <div class="row">
+            <div class="col-md-6">
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.MaDH, "Mã đơn hàng", new { @class = "form-label" })
+                    @Html.DropDownList("MaDH", null, htmlAttributes: new { @class = "form-select" })
+                    @Html.ValidationMessageFor(model => model.MaDH, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.DonViVanChuyen, "Đơn vị vận chuyển", new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.DonViVanChuyen, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.DonViVanChuyen, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.TrangThai, "Trạng thái", new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.TrangThai, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.NgayTao, "Ngày tạo", new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.NgayTao, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
+                    @Html.ValidationMessageFor(model => model.NgayTao, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.ThoiGianGiao, "Thời gian giao", new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.ThoiGianGiao, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
+                    @Html.ValidationMessageFor(model => model.ThoiGianGiao, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.ThoiGianNhan, "Thời gian nhận", new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.ThoiGianNhan, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
+                    @Html.ValidationMessageFor(model => model.ThoiGianNhan, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DonViVanChuyen, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DonViVanChuyen, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DonViVanChuyen, "", new { @class = "text-danger" })
+        <div class="text-center mt-4">
+            <div class="d-inline-flex gap-2">
+                <button type="submit" class="btn-submit">
+                    <i class="fa-solid fa-check"></i> Lưu thông tin
+                </button>
+
+                @Html.ActionLink("Hủy", "QLVC", null, new { @class = " btn-cancel text-decoration-none" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TrangThai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TrangThai, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NgayTao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NgayTao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NgayTao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ThoiGianGiao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ThoiGianGiao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ThoiGianGiao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ThoiGianNhan, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ThoiGianNhan, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ThoiGianNhan, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "QLVC")
+    }
 </div>
-
-@*@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}*@
